--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-###################
+#################
 # Byte code files #
-###################
+#################
 *.class
 
 #################
@@ -10,10 +10,12 @@
 *.war
 *.ear
 
-####################
+#################
 # specific folders #
-####################
+#################
 bin
+nbproject
+
 #######################
 # Workspase generated #
 #######################
@@ -21,3 +23,4 @@ bin
 .classpath
 .settings
 /nbproject/private/
+*.xml
