added spout furnace recipes support

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,4 +2,4 @@ name: MoOres
 main: com.github.Zarklord1.MoOres.MoOres
 version: 1.5 Alpha
 load: startup
-depend: [Spout]
+depend: [Spout] [Furnace Api]
