made custom drops work

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,4 +2,6 @@ name: MoOres
 main: com.github.Zarklord1.MoOres.MoOres
 version: 1.5 Alpha
 load: startup
-depend: [Spout] [Furnace Api]
+depend: [Spout]
+softdepend: [Furnace Api]
+
