--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,6 @@
 name: MoOres
 main: com.github.Zarklord1.MoOres.MoOres
-version: 1.5 Alpha
+version: 1.3.1 beta 
 load: startup
 depend: [Spout]
-softdepend: [Furnace Api]
 
