--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,7 @@
 name: MoOres
 main: com.github.Zarklord1.MoOres.MoOres
-version: 1.3.1 beta
+version: 1.4.0 beta
 load: startup
 depend: [Spout]
+softdepend: [Furnace-Api]
 
